--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="css/style.css">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>510-Music</title>
 </head>
@@ -22,7 +18,6 @@
 <body>
 
   <!-- Navbar -->
-
   <div class="warna">
     <div class="container-fluid px-md-5">
       <div class="row justify-content-between">
@@ -36,16 +31,9 @@
         <div class="col-md-4 d-flex">
           <div class="social-media">
             <p class="mb-0 d-flex align-items-center">
-              <a href="https://www.instagram.com/official510music/"
-                class="d-flex align-items-center justify-content-center text-decoration-none"><i
-                  class='bx bxl-instagram-alt'></i></a>
-              <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ"
-                class="d-flex align-items-center justify-content-center text-decoration-none"><i
-                  class='bx bxl-spotify'></i></a>
-              <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg"
-                class="d-flex align-items-center justify-content-center text-decoration-none"><i
-                  class='bx bxl-youtube'></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"></a>
+              <a href="https://www.instagram.com/official510music/" class="d-flex align-items-center justify-content-center text-decoration-none"><i class='bx bxl-instagram-alt'></i></a>
+              <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ" class="d-flex align-items-center justify-content-center text-decoration-none"><i class='bx bxl-spotify'></i></a>
+              <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg" class="d-flex align-items-center justify-content-center text-decoration-none"><i class='bx bxl-youtube'></i></a>
             </p>
           </div>
         </div>
@@ -55,11 +43,14 @@
   <div class="warna2">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
       <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav m-auto">
             <li class="nav-item active"><a href="../../index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/profil.html" class="nav-link">Profil</a></li>
-            <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/gallery.html" class="nav-link">Gallery</a></li>
+            <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/gallery.html" class="nav-link">Gallery </a></li>
             <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/history.html" class="nav-link">History</a></li>
             <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/merch.html" class="nav-link">Merchendice</a></li>
             <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/contact.html" class="nav-link">Contact</a></li>
@@ -71,67 +62,64 @@
   <!-- END nav -->
 
   <!-- Slideshow -->
-  <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
+  <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner d-block">
       <div class="carousel-item active">
-        <a href="https://open.spotify.com/intl-id/track/2DJ8GBpW9PFTLnHg7tGB9p?si=a0389aac972c4253"><img class="w-100"
-            src="assets/img/alive.png" alt="First slide"></a>
+        <a href="https://open.spotify.com/intl-id/track/2DJ8GBpW9PFTLnHg7tGB9p?si=a0389aac972c4253"><img class="w-100" src="assets/img/alive.png" alt="First slide"></a>
       </div>
       <div class="carousel-item">
-        <a href="https://open.spotify.com/intl-id/track/4kiiNIJ6ADoqrTyHkWLuJa?si=5077944f8f674bce"><img class="w-100"
-            src="assets/img/mama.png" alt="Second slide"></a>
+        <a href="https://open.spotify.com/intl-id/track/4kiiNIJ6ADoqrTyHkWLuJa?si=5077944f8f674bce"><img class="w-100" src="assets/img/mama.png" alt="Second slide"></a>
       </div>
       <div class="carousel-item">
         <a href="https://shopee.co.id/510merch"><img class="w-100" src="assets/img/merch.png" alt="Third slide"></a>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only"></span>
+      <span class="visually-hidden">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only"></span>
+      <span class="visually-hidden">Next</span>
     </a>
   </div>
   <!-- end slideshow -->
 
   <!-- Home -->
-  <h1 class="text1 d-flex justify-content-center" style="margin-top: 15px; margin-bottom: 10%; font-size: 60px;" data-aos="fade-zoom-in"
-  data-aos-easing="ease-in-back">Latest News</h1>
+  <h1 class="text1 d-flex justify-content-center" style="margin-top: 15px; margin-bottom: 10%; font-size: 60px;" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">Latest News</h1>
   <div class="container">
-      <div class="row justify-content-center">
-          <div class="col-md-4 mb-4" data-aos="fade-up"> <!-- Menggunakan col-md-4 untuk 3 kartu dalam satu baris -->
-              <div class="card" style="border-radius: 15px; margin-right: 30px;">
-                  <img src="assets/img/show.jpg" class="card-img-top p-3 rounded-3" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title"><b>5th Anniversary 510squad!!</b></h5>
-                      <p class="card-text">Let's celebrate, on Friday, 21 February 2025. Bandung</p>
-                      <a href="https://www.instagram.com/510squadofficial/p/DEMvIBPS52W/?img_index=1" class="btn btn-primary" style="background-color: rgb(143, 0, 0); border: 0;">View More</a>
-                  </div>
-              </div>
+    <div class="row justify-content-center">
+      <div class="col-sm-12 col-md-4 mb-4" data-aos="fade-up">
+        <div class="card" style="border-radius: 15px; margin-right: 30px;">
+          <img src="assets/img/show.jpg" class="card-img-top p-3 rounded-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"><b>5th Anniversary 510squad!!</b></h5>
+            <p class="card-text">Let's celebrate, on Friday, 21 February 2025. Bandung</p>
+            <a href="https://www.instagram.com/510squadofficial/p/DEMvIBPS52W/?img_index=1" class="btn btn-primary" style="background-color: rgb(143, 0, 0); border: 0;">View More</a>
           </div>
-          <div class="col-md-4 mb-4" data-aos="fade-up"> <!-- Menggunakan col-md-4 untuk 3 kartu dalam satu baris -->
-              <div class="card" style="border-radius: 15px; margin-right: 30px;">
-                  <img src="assets/img/mimbar.webp" class="card-img-top p-3" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title"><b>New Song!!</b></h5>
-                      <p class="card-text">Finally the new song has been released, Listen it on now!</p>
-                      <a href="https://open.spotify.com/intl-id/track/3JJk7WItG5gOWyw76DR67x?si=72deba2c6dc44767" class="btn btn-primary" style="background-color: rgb(143, 0, 0); border: 0;">View More</a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4 mb-4" data-aos="fade-up"> <!-- Menggunakan col-md-4 untuk 3 kartu dalam satu baris -->
-              <div class="card" style="border-radius: 15px; margin-right: 30px;">
-                  <img src="assets/img/achievement.jpg" class="card-img-top p-3" alt="...">
-                  <div class="card-body">
-                      <h5 class="card-title"><b>New Achievement!!</b></h5>
-                      <p class="card-text">New milestones have arrived! Thank you very much!</p>
-                      <a href="https://open.spotify.com/intl-id/artist/298CtZa1wRSxNc38FmWbiX?si=x2OkDOsuRluL2PhwPOBWeQ" class="btn btn-primary" style="background-color: rgb(143, 0, 0); border: 0;">View More</a>
-                  </div>
-              </div>
-          </div>
+        </div>
       </div>
+      <div class="col-sm-12 col-md-4 mb-4" data-aos="fade-up">
+        <div class="card" style="border-radius: 15px; margin-right: 30px;">
+          <img src="assets/img/mimbar.webp" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"><b>New Song!!</b></h5>
+            <p class="card-text">Finally the new song has been released, Listen it on now!</p>
+            <a href="https://open.spotify.com/intl-id/track/3JJk7WItG5gOWyw76DR67x?si=72deba2c6dc44767" class="btn btn-primary" style=" background-color: rgb(143, 0, 0); border: 0;">View More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4 mb-4" data-aos="fade-up">
+        <div class="card" style="border-radius: 15px; margin-right: 30px;">
+          <img src="assets/img/achievement.jpg" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"><b>New Achievement!!</b></h5>
+            <p class="card-text">New milestones have arrived! Thank you very much!</p>
+            <a href="https://open.spotify.com/intl-id/artist/298CtZa1wRSxNc38FmWbiX?si=x2OkDOsuRluL2PhwPOBWeQ" class="btn btn-primary" style="background-color: rgb(143, 0, 0); border: 0;">View More</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- end home -->
 
@@ -141,41 +129,35 @@
       <div class="container p-3">
         <div class="row">
           <div class="col-lg-6 col-md-12 mb-4 mb-md-0 d-flex justify-content-center align-items-center">
-            <img style="width: 20%px;" src="assets/img/logo.png" alt="">
-        </div>
-  
+            <img style="width: 50%;" src="assets/img/logo.png" alt="">
+          </div>
+
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase text-white">Social</h5>
-  
+            <h5 class="text-uppercase2 text-white">Social</h5>
+
             <ul class="social list-unstyled mb-0">
               <li>
-                <a href="https://www.instagram.com/official510music/"
-                class="d-flex align-items-center justify-content-left text-decoration-none"><i
-                  class='bx bxl-instagram-alt'></i><small class="ms-2" style="font-size: 18px;">@official510music</small></a>
+                <a href="https://www.instagram.com/official510music/" class="d-flex align-items-center justify-content-left text-decoration-none"><i class='bx bxl-instagram-alt'></i><small class="ms-2" style="font-size: 18px;">@official510music</small></a>
               </li>
               <li>
-                <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ"
-                class="d-flex align-items-center justify-content-left text-decoration-none"><i
-                  class='bx bxl-spotify'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
+                <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ" class="d-flex align-items-center justify-content-left text-decoration-none"><i class='bx bxl-spotify'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
               </li>
               <li>
-                <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg"
-                class="d-flex align-items-center justify-content-left text-decoration-none"><i
-                  class='bx bxl-youtube'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
+                <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg" class="d-flex align-items-center justify-content-left text-decoration-none"><i class='bx bxl-youtube'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
               </li>
             </ul>
           </div>
-  
+
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase mb-0 text-white" style="margin-left: 5%;">Menu</h5>
-  
+            <h5 class="text-uppercase mb-0 text-white">Menu</h5>
+
             <ul class="list-unstyled">
-            <li class="nav-item active"><a href="index.html" class="nav-link text-white" style="margin-bottom: -15px;">Home</a></li>
-            <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/profil.html" class="nav-link text-white" style="margin-bottom: -15px;">Profil</a></li>
-            <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/gallery.html" class="nav-link text-white" style="margin-bottom: -15px;">Gallery</a></li>
-            <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/history.html" class="nav-link text-white" style="margin-bottom: -15px;">History</a></li>
-            <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/merch.html" class="nav-link text-white" style="margin-bottom: -15px;">Merchendice</a></li>
-            <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/contact.html" class="nav-link text-white" style="margin-bottom: -15px;">Contact</a></li>
+              <li class="nav-item active"><a href="index.html" class="nav-link text-white" style="margin-bottom: -15px;">Home</a></li>
+              <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/profil.html" class="nav-link text-white" style="margin-bottom: -15px;">Profil</a></li>
+              <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/gallery.html" class="nav-link text-white" style="margin-bottom: -15px;">Gallery</a></li>
+              <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/history.html" class="nav-link text-white" style="margin-bottom: -15px;">History</a></li>
+              <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/merch.html" class="nav-link text-white" style="margin-bottom: -15px;">Merchendice</a></li>
+              <li class="nav-item"><a href="../../itw2024_project2_243040086/assets/views/contact.html" class="nav-link text-white" style="margin-bottom: -15px;">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -190,13 +172,13 @@
 
   <script>
     window.addEventListener('load', function() {
-    AOS.init();
-});
+      AOS.init();
+    });
   </script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
